# qjsonrpc

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
.gear/: libqjsonrpc.spec  rules
.github/workflows/: build.yml  main.yml
cmake/: QJSonRPCBuildTreeSettings.cmake.in  QJSonRPCConfig.cmake.in
include/qjsonrpc/: qjsonrpcabstractserver.h  qjsonrpcglobal.h  qjsonrpchttpclient.h  qjsonrpchttpserver.h  qjsonrpclocalserver.h  qjsonrpcmessage.h  qjsonrpcmetatype.h  qjsonrpcservice.h  qjsonrpcserviceprovider.h  qjsonrpcservicereply.h  qjsonrpcsocket.h  qjsonrpctcpserver.h
src/: CMakeLists.txt  qjsonrpchttpserver.cpp
tests/: CMakeLists.txt
tests/auto/: CMakeLists.txt
tests/auto/issue22/: CMakeLists.txt  tst_issue22.cpp
tests/auto/qjsonrpchttpclient/: CMakeLists.txt
tests/auto/qjsonrpchttpserver/: CMakeLists.txt
tests/auto/qjsonrpcmessage/: CMakeLists.txt  tst_qjsonrpcmessage.cpp
tests/auto/qjsonrpcmetatype/: CMakeLists.txt
tests/auto/qjsonrpcserver/: CMakeLists.txt  tst_qjsonrpcserver.cpp
tests/auto/qjsonrpcservice/: CMakeLists.txt
tests/auto/qjsonrpcsocket/: CMakeLists.txt
tests/manual/: CMakeLists.txt
tests/manual/benchmark/: CMakeLists.txt
tests/manual/console/: CMakeLists.txt
tests/manual/httpclient/: CMakeLists.txt
tests/manual/httpserver/: CMakeLists.txt  testservice.cpp
tests/manual/localclient/: CMakeLists.txt
tests/manual/localserver/: CMakeLists.txt  testservice.cpp
tests/manual/qjsonrpc/: CMakeLists.txt
tests/manual/tcpclient/: CMakeLists.txt
tests/manual/tcpserver/: CMakeLists.txt  testservice.cpp
